edition, typos, more material added

--- a/diffgeo/aux/macros.sty
+++ b/diffgeo/aux/macros.sty
@@ -72,15 +72,22 @@
 % mechanics
 %
 \providecommand*{\acc}{a}               % acceleration
+\providecommand*{\force}{f}             % force
 \providecommand*{\event}[1]{\point{#1}} % event
 \providecommand*{\length}{l}            % length
+\providecommand*{\mass}{m}              % mass
+\providecommand*{\lmom}{p}              % linear momentum
 \providecommand*{\pos}{x}               % position
 \providecommand*{\svec}{\xi}            % separation vector
 \providecommand*{\vel}{u}               % velocity
 %
 % energy transport
 %
-\providecommand*{\temp}{\theta} % temperature
+\providecommand*{\energy}{e}                % energy
+\providecommand*{\ekin}{\energy\sbtxt{kin}} % kinetic energy
+\providecommand*{\epot}{\energy\sbtxt{pot}} % potential energy
+\providecommand*{\elag}{\energy\sbtxt{lag}} % lagrangian energy
+\providecommand*{\temp}{\theta}             % temperature
 %
 % derivatives
 %
