--- a/diffgeo/diffgeo.tex
+++ b/diffgeo/diffgeo.tex
@@ -2,7 +2,7 @@
 \RequirePackage{fix-cm}                % fixes cm calcs
 \RequirePackage[l2tabu, orthodox]{nag} % old packages checker
 
-\documentclass[aps,pra,10pt,a4paper]{revtex4-1}
+\documentclass[aps,pra,10pt,a4paper]{revtex4-1} % reprint
 
 \usepackage{./aux/artstyle}
 \usepackage{./aux/macros}
@@ -17,6 +17,6 @@
 
 %\input{./doc/mechanics}
 \input{./doc/tensor}
-%\input{./doc/gravitation}
+\input{./doc/gravitation}
 
 \end{document}
