--- a/diffgeo/aux/artstyle.sty
+++ b/diffgeo/aux/artstyle.sty
@@ -7,6 +7,7 @@
 \RequirePackage{amsfonts}
 \RequirePackage{amssymb}
 \RequirePackage{amsthm}
+\RequirePackage[pdalt]{bropd}
 \RequirePackage{cleveref}
 \RequirePackage{fixltx2e}
 \RequirePackage[fixamsmath,disallowspaces]{mathtools}
