edit, typos, corrections, text added

--- a/diffgeo/aux/artstyle.sty
+++ b/diffgeo/aux/artstyle.sty
@@ -15,6 +15,7 @@
 \RequirePackage{microtype}
 \RequirePackage{mleftright}
 \RequirePackage{tensor}
+\RequirePackage{refcheck}
 \RequirePackage[inline]{showlabels}
 \RequirePackage{siunitx}
 \RequirePackage[svgnames]{xcolor}
