--- a/diffgeo/diffgeo.tex
+++ b/diffgeo/diffgeo.tex
@@ -16,7 +16,8 @@
 %\maketitle
 
 %\input{./doc/mechanics}
-\input{./doc/tensor}
-\input{./doc/gravitation}
+%\input{./doc/tensor}
+%\input{./doc/gravitation}
+\input{./doc/kinenergy}
 
 \end{document}
